[gd_scene load_steps=22 format=3 uid="uid://b051s7k4rtfht"]

[ext_resource type="Script" uid="uid://evcsqmcd6c4p" path="res://Scenes/Main/main.gd" id="1_y3v7k"]
[ext_resource type="PackedScene" uid="uid://dt744m0awmxy1" path="res://Scenes/Main/IDE/ide.tscn" id="2_br8qb"]
[ext_resource type="Script" uid="uid://gn63tvfxafh4" path="res://Scenes/Main/Sidebar.gd" id="3_8gcrf"]
[ext_resource type="PackedScene" uid="uid://cue0bc06w0cio" path="res://Scenes/Main/Field/field.tscn" id="4_8gcrf"]
[ext_resource type="Theme" uid="uid://baa8hhlkq0brg" path="res://Assets/Themes/main.tres" id="4_rdp1x"]
[ext_resource type="Script" uid="uid://c7jrv7iomocsm" path="res://Scenes/Main/Shopbar.gd" id="5_5wuev"]
[ext_resource type="PackedScene" uid="uid://iog6rk6wy7ox" path="res://Scenes/Main/Shop/shop_field.tscn" id="5_nyu32"]
[ext_resource type="FontFile" uid="uid://ricvkaxjia5v" path="res://Assets/Fonts/Jersey15-Regular.ttf" id="5_rdp1x"]
[ext_resource type="Script" uid="uid://dy7jp51rudqnd" path="res://Scenes/Main/h_slider.gd" id="8_qiqqp"]
[ext_resource type="Texture2D" uid="uid://ym538kbvpl4g" path="res://icon.svg" id="9_k7uo0"]
[ext_resource type="PackedScene" uid="uid://dlmdswquwdicb" path="res://Assets/bit/bit.tscn" id="11_8x5ba"]
[ext_resource type="AudioStream" uid="uid://cwgihi46womqx" path="res://Assets/Sounds/bug.wav" id="12_3348s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7uo0"]
bg_color = Color(0.819608, 0.678431, 0.313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.540213, 0.43171, 0.15343, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 20.0
expand_margin_right = 73.0

[sub_resource type="LabelSettings" id="LabelSettings_qiqqp"]
font_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x5ba"]
bg_color = Color(0.819608, 0.678431, 0.313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.537255, 0.431373, 0.152941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_3348s"]
paragraph_spacing = -10.0
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qiqqp"]
bg_color = Color(0.819608, 0.678431, 0.313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.541176, 0.431373, 0.152941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_k7uo0"]
font = ExtResource("5_rdp1x")
font_size = 60
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0isb"]
bg_color = Color(0.68864, 0.202679, 0.874568, 1)
border_width_top = 2
border_width_right = 4
border_width_bottom = 2
border_color = Color(0.280589, 0.0275234, 0.370044, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="Theme" id="Theme_nyu32"]
default_base_scale = 1.0
default_font = ExtResource("5_rdp1x")
Button/font_sizes/font_size = 55
Button/styles/focus = SubResource("StyleBoxFlat_w0isb")
Button/styles/hover = SubResource("StyleBoxFlat_w0isb")
Button/styles/normal = SubResource("StyleBoxFlat_w0isb")
Button/styles/pressed = SubResource("StyleBoxFlat_w0isb")

[sub_resource type="LabelSettings" id="LabelSettings_w0isb"]
font = ExtResource("5_rdp1x")
font_size = 120
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="Main" type="Node2D"]
script = ExtResource("1_y3v7k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 360.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="FieldViewport" parent="Control" instance=ExtResource("4_8gcrf")]
layout_mode = 1
anchor_left = -0.391
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.279999
offset_right = 0.0
offset_bottom = 0.0

[node name="EditorBar" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 72.0
offset_bottom = 621.0
script = ExtResource("3_8gcrf")

[node name="Editor" parent="Control/EditorBar" instance=ExtResource("2_br8qb")]

[node name="Button" type="Button" parent="Control/EditorBar"]
layout_mode = 0
offset_left = 9.0
offset_top = 300.0
offset_right = 49.0
offset_bottom = 420.0
theme = ExtResource("4_rdp1x")
text = "<"

[node name="ColorRect" type="ColorRect" parent="Control/EditorBar"]
layout_mode = 2
offset_left = -4.0
offset_right = 9.0
offset_bottom = 720.0
color = Color(0.554822, 0.881036, 0.791362, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/EditorBar"]
layout_mode = 2
offset_left = 6.975
offset_right = 10.405
offset_bottom = 720.0
color = Color(0.232029, 0.495144, 0.42893, 1)

[node name="Button2" type="Button" parent="Control/EditorBar"]
layout_mode = 0
offset_left = 52.0
offset_top = 631.0
offset_right = 367.0
offset_bottom = 695.0
theme = ExtResource("4_rdp1x")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("5_rdp1x")
theme_override_styles/focus = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/normal = SubResource("StyleBoxFlat_k7uo0")
text = "Place Unit"
alignment = 0

[node name="Label3" type="Label" parent="Control/EditorBar/Button2"]
layout_mode = 0
offset_left = 217.0
offset_top = 2.0
offset_right = 321.0
offset_bottom = 63.0
text = "0"
label_settings = SubResource("LabelSettings_qiqqp")
horizontal_alignment = 2

[node name="Bit2" parent="Control/EditorBar/Button2" instance=ExtResource("11_8x5ba")]
layout_mode = 0
offset_left = 350.0
offset_top = -6.0
offset_right = 427.0
offset_bottom = 73.86
scale = Vector2(0.3, 0.3)

[node name="Button4" type="Button" parent="Control/EditorBar"]
layout_mode = 0
offset_left = 52.0
offset_top = 631.0
offset_right = 367.0
offset_bottom = 695.0
theme = ExtResource("4_rdp1x")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("5_rdp1x")
theme_override_styles/focus = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_k7uo0")
theme_override_styles/normal = SubResource("StyleBoxFlat_k7uo0")
text = "Upgrade"
alignment = 0

[node name="Label3" type="Label" parent="Control/EditorBar/Button4"]
layout_mode = 0
offset_left = 217.0
offset_top = 2.0
offset_right = 321.0
offset_bottom = 63.0
text = "0"
label_settings = SubResource("LabelSettings_qiqqp")
horizontal_alignment = 2

[node name="Label5" type="Label" parent="Control/EditorBar/Button4"]
layout_mode = 0
offset_left = -15.0
offset_top = -107.0
offset_right = 253.0
offset_bottom = -44.0
theme = ExtResource("4_rdp1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_8x5ba")
text = "unit lvl. 1
max_blocks = 5"
label_settings = SubResource("LabelSettings_3348s")

[node name="Label6" type="Label" parent="Control/EditorBar/Button4"]
layout_mode = 0
offset_left = -15.0
offset_top = -159.0
offset_right = 253.0
offset_bottom = -120.0
theme = ExtResource("4_rdp1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_8x5ba")
text = "use shift to target"
label_settings = SubResource("LabelSettings_3348s")
horizontal_alignment = 1

[node name="Bit2" parent="Control/EditorBar/Button4" instance=ExtResource("11_8x5ba")]
layout_mode = 0
offset_left = 348.0
offset_top = -6.0
offset_right = 425.0
offset_bottom = 73.86
scale = Vector2(0.3, 0.3)

[node name="Button3" type="Button" parent="Control/EditorBar"]
layout_mode = 0
offset_left = 125.0
offset_top = 11.0
offset_right = 408.0
offset_bottom = 75.0
theme = ExtResource("4_rdp1x")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("5_rdp1x")
theme_override_styles/focus = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qiqqp")
theme_override_styles/normal = SubResource("StyleBoxFlat_qiqqp")
text = "Next Wave"

[node name="TextureButton" type="TextureButton" parent="Control/EditorBar"]
layout_mode = 0
offset_left = 28.0
offset_top = 8.0
offset_right = 156.0
offset_bottom = 136.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_k7uo0")
texture_pressed = ExtResource("9_k7uo0")
texture_hover = ExtResource("9_k7uo0")
texture_disabled = ExtResource("9_k7uo0")
texture_focused = ExtResource("9_k7uo0")

[node name="HSlider" type="HSlider" parent="Control/EditorBar"]
layout_mode = 0
offset_left = 45.0
offset_top = 121.0
offset_right = 397.0
offset_bottom = 206.0
max_value = 2.0
step = 0.1
value = 1.0
script = ExtResource("8_qiqqp")

[node name="Label3" type="Label" parent="Control/EditorBar/HSlider"]
layout_mode = 0
offset_left = -1.0
offset_top = -44.0
offset_right = 351.0
offset_bottom = 40.0
text = "1.0x"
label_settings = SubResource("LabelSettings_k7uo0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopBar" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 560.0
offset_right = 561.0
offset_bottom = 1.0
scale = Vector2(-1, 1)
script = ExtResource("5_5wuev")

[node name="ShopButton" type="Button" parent="Control/ShopBar"]
layout_mode = 0
offset_left = 9.0
offset_top = 300.0
offset_right = 49.0
offset_bottom = 420.0
theme = SubResource("Theme_nyu32")
theme_type_variation = &"FlatButton"
text = "<"

[node name="ColorRect" type="ColorRect" parent="Control/ShopBar"]
layout_mode = 2
offset_left = -18.0
offset_right = 10.0
offset_bottom = 720.0
color = Color(0.91, 0.3549, 0.91, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/ShopBar"]
layout_mode = 2
offset_left = 6.975
offset_right = 10.405
offset_bottom = 720.0
color = Color(0.447644, 0.0719742, 0.582081, 1)

[node name="Shop" parent="Control/ShopBar" instance=ExtResource("5_nyu32")]
offset = Vector2(920, 0)
transform = Transform2D(1, 0, 0, 1, 920, 0)

[node name="Label" type="Label" parent="Control/ShopBar"]
layout_mode = 0
offset_left = 638.0
offset_top = 599.0
offset_right = 1128.0
offset_bottom = 720.0
scale = Vector2(-1, 1)
text = "0"
label_settings = SubResource("LabelSettings_w0isb")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="Control/ShopBar"]
layout_mode = 0
offset_left = 518.0
offset_top = 4.0
offset_right = 1002.0
offset_bottom = 125.0
scale = Vector2(-1, 1)
text = "test_case: "
label_settings = SubResource("LabelSettings_k7uo0")
horizontal_alignment = 2

[node name="Label3" type="Label" parent="Control/ShopBar/Label2"]
layout_mode = 0
offset_left = -24.0
offset_top = 49.0
offset_right = 487.0
offset_bottom = 170.0
text = "0"
label_settings = SubResource("LabelSettings_w0isb")
horizontal_alignment = 2

[node name="Bit" parent="Control/ShopBar" instance=ExtResource("11_8x5ba")]
layout_mode = 0
offset_left = 39.89
offset_top = 620.655
offset_right = 116.89
offset_bottom = 700.515
scale = Vector2(0.3, 0.3)

[node name="Winner" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 172.0
offset_right = 538.0
offset_bottom = 489.0
text = "Congrats!
and thank you
for playing our game!
waves may now be
looped at your leisure"
label_settings = SubResource("LabelSettings_k7uo0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_3348s")
volume_db = 0.5
autoplay = true

[connection signal="mouse_entered" from="Control/EditorBar" to="Control/EditorBar" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar" to="Control/EditorBar" method="_on_mouse_exited"]
[connection signal="button_down" from="Control/EditorBar/Button" to="Control/EditorBar" method="_on_button_button_down"]
[connection signal="button_down" from="Control/EditorBar/Button" to="Control/ShopBar" method="_on_button_button_down"]
[connection signal="mouse_entered" from="Control/EditorBar/Button" to="Control/EditorBar" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar/Button" to="Control/EditorBar" method="_on_button_mouse_exited"]
[connection signal="mouse_entered" from="Control/EditorBar/ColorRect" to="Control/EditorBar" method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar/ColorRect" to="Control/EditorBar" method="_on_color_rect_mouse_exited"]
[connection signal="button_down" from="Control/EditorBar/Button2" to="Control/EditorBar" method="_on_button_2_button_down"]
[connection signal="mouse_entered" from="Control/EditorBar/Button2" to="Control/EditorBar" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar/Button2" to="Control/EditorBar" method="_on_button_2_mouse_exited"]
[connection signal="button_down" from="Control/EditorBar/Button4" to="Control/EditorBar" method="_on_button_4_button_down"]
[connection signal="mouse_entered" from="Control/EditorBar/Button4" to="Control/EditorBar" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar/Button4" to="Control/EditorBar" method="_on_button_2_mouse_exited"]
[connection signal="button_down" from="Control/EditorBar/Button3" to="." method="_on_button_3_button_down"]
[connection signal="mouse_entered" from="Control/EditorBar/Button3" to="Control/EditorBar" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar/Button3" to="Control/EditorBar" method="_on_button_2_mouse_exited"]
[connection signal="mouse_entered" from="Control/EditorBar/HSlider" to="Control/EditorBar" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Control/EditorBar/HSlider" to="Control/EditorBar" method="_on_button_2_mouse_exited"]
[connection signal="value_changed" from="Control/EditorBar/HSlider" to="Control/EditorBar/HSlider" method="_on_value_changed"]
[connection signal="button_down" from="Control/ShopBar/ShopButton" to="Control/EditorBar" method="_on_shop_button_button_down"]
[connection signal="button_down" from="Control/ShopBar/ShopButton" to="Control/ShopBar" method="_on_shop_button_button_down"]
[connection signal="mouse_entered" from="Control/ShopBar/ShopButton" to="Control/ShopBar" method="_on_shop_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/ShopBar/ShopButton" to="Control/ShopBar" method="_on_shop_button_mouse_exited"]
[connection signal="mouse_entered" from="Control/ShopBar/ColorRect" to="Control/ShopBar" method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="Control/ShopBar/ColorRect" to="Control/ShopBar" method="_on_color_rect_mouse_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="Control/EditorBar" method="_on_audio_stream_player_finished"]
